--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,6 +1,12 @@
 <ion-header>
 
   <ion-navbar>
+    <ion-buttons start>
+      <button ion-button menuToggle>
+        <ion-icon name="menu">
+        </ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Favorite Quotes</ion-title>
   </ion-navbar>
 
@@ -11,12 +17,14 @@
   <ion-list>
     <ion-item-sliding *ngFor="let quote of quotes">
       <ion-item
+        color="quoteBackground"
+        [ngClass]="{alt: isAltbackground()}"
         (click)="onViewQuote(quote)">
         <h2>{{ quote.person }}</h2>
         <p>{{ quote.text }}</p>
       </ion-item>
       <ion-item-options>
-        <button ion-button colo="danger" (click)="onRemoveFromFavorites(quote)">
+        <button ion-button color="danger" (click)="onRemoveFromFavorites(quote)">
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
